<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>raspi_gpio</name>
  <version>0.1.0</version>
  <description>The raspi_gpio package</description>
  <maintainer email="mwiejak@camk.edu.pl">Marek Wiejak</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>actionlib</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
