<?xml version="1.0"?>
<package format="2">
  <name>robot_state_machine</name>
  <version>0.1.0</version>
  <description>The robot_state_machine package</description>
  <maintainer email="mwiejak@camk.edu.pl">Marek Wiejak</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
