<?xml version="1.0"?>
<package format="2">
  <name>seismic_basic</name>
  <version>0.1.0</version>
  <description>The seismic_basic package</description>
  <maintainer email="mwiejak@camk.edu.pl">Marek Wiejak</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
