<?xml version="1.0"?>
<package format="2">
  <name>seismic_bringup</name>
  <version>0.1.0</version>
  <description>The seismic_bringup package</description>
  <maintainer email="mwiejak@camk.edu.pl">Marek Wiejak</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tic_crane</depend>
  <depend>raspi_gpio</depend>
  <depend>crane_state_machine</depend>
  <depend>robot_state_machine</depend>
  <depend>seismic_basic</depend>
  <depend>task_determiner</depend>
  <depend>sensor_server</depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
